--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -2,6 +2,7 @@
 // Basic button styling
 // To style a link to look like a button use .button
 
+.btn,
 button,
 input[type=submit],
 input[type=reset],
@@ -13,10 +14,58 @@ input[type=button] {
     color: @heritage-blue;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     font-weight: bold;
+    margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
     &:hover,
     &:focus,
     &:active {
         background-color: darken(@aqua, 5%)
+    }
+}
+.btn-primary {
+    color: @heritage-blue;
+    background-color: @aqua;
+    &:hover, &:active, &:focus  {
+        background-color: darken(@aqua, 10%);
+    }
+}
+.btn-primary-light {
+    color: @heritage-blue;
+    background-color: @aqua-light;
+    &:hover, &:active, &:focus  {
+        background-color: @aqua;
+    }
+}
+.btn-secondary {
+    color: @white;
+    background-color: @heritage-blue; 
+    &:hover, &:active, &:focus  {
+        background-color: darken(@heritage-blue, 5%);
+    }
+}
+.btn-disabled {
+    color: @gray-3;
+    background-color: @gray-6;
+    cursor: not-allowed;
+    &:hover, &:active, &:focus  {
+        color: @gray-3;
+        background-color: @gray-6;             
+    }
+}    
+.btn-warning {
+    color: @white;
+    background-color: @red; 
+    &:hover, &:active, &:focus  {
+        color: @white;
+        background-color: darken(@red, 10%);             
+    }
+}    
+
+.btn-primary-outline {
+    background-color: @white;
+    border: 1px solid @heritage-blue-light;
+    color: @heritage-blue;
+    &:hover, &:active, &:focus  {
+        background-color: @heritage-blue-lighter;
     }
 }
 
