Fixed DOB input width

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -318,6 +318,7 @@ input[type="file"]::before {
     &:after {
         color: @black;
         pointer-events:none;
+        border: none;
     }
     select {
         background: none;
@@ -338,7 +339,7 @@ input[class*="dob-"] {
 }
 
 .form-group-date {
-    width: 5rem;
+    width: 6rem;
     display: inline-block;
     float: left;
     margin-right: @box-spacing-horizontal/2;
