Add toolbar page to guidelines

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -5,7 +5,7 @@
  .title__subheading {
     margin-bottom: 2rem;
     margin-top: 2rem;
-    padding: 1rem 0 .35rem 0;
+    padding: .35rem 0;
     border-top: @gray-7 1px solid;
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
@@ -13,8 +13,10 @@
     
     .btn {
         padding: .3em .5em;
+        margin-left: .25rem;
         border-radius: @form-border-radius;
         font-weight: @font-weight-bolder;
+        font-size: @font-size-small;
         cursor: pointer;
         color: @heritage-blue;
     }
