--- a/public/css/site.css
+++ b/public/css/site.css
@@ -4936,7 +4936,7 @@ input.main-header__search__input {
 .title__subheading {
   margin-bottom: 2rem;
   margin-top: 2rem;
-  padding: 1rem 0 .35rem 0;
+  padding: .35rem 0;
   border-top: #eeeeee 1px solid;
   border-bottom: #eeeeee 1px solid;
   font-size: 0.875rem;
@@ -4944,8 +4944,10 @@ input.main-header__search__input {
 }
 .title__subheading .btn {
   padding: .3em .5em;
+  margin-left: .25rem;
   border-radius: 2px;
   font-weight: 700;
+  font-size: 0.875rem;
   cursor: pointer;
   color: #004b88;
 }
