--- a/libs/site.less
+++ b/libs/site.less
@@ -1,5 +1,6 @@
 /* Vendor files */
 @import "vendors/normalize";
+@import "vendors/font-awesome/less/font-awesome";
 
 /* Override files */
 @import "styleguide/guide";
