--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -6,6 +6,7 @@
     margin-bottom: 2rem;
     margin-top: 2rem;
     padding: .35rem 0;
+    padding: 1rem 0 1rem 0;
     border-top: @gray-7 1px solid;
     border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
