--- a/public/css/site.css
+++ b/public/css/site.css
@@ -6971,7 +6971,7 @@ input.main-header__search__input {
 .title__subheading {
   margin-bottom: 2rem;
   margin-top: 2rem;
-  padding: .35rem 0;
+  padding: 1rem 0 1rem 0;
   border-top: #eeeeee 1px solid;
   border-bottom: #eeeeee 1px solid;
   font-size: 0.875rem;
