Slight fixes for reference links.

--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -12,6 +12,9 @@
 	max-width: 25%; 
 	text-align: right; 
 	display: inline-block;
+	.vertical-align;
+	font-size: @font-size-base;
+	font-weight: @font-weight-base;
 
     & > a {
         // Override global word break
@@ -85,7 +88,7 @@ h4 > .ref-heading__toggle {
 	height: 100%; 
 	left: 0; 
 	top: 0; 
-	background-color: @gray-8; 
+	//background-color: @gray-8; 
 	display: block; 
 	position: absolute; 
 	z-index: -1;
