Fixes to revealables

--- a/libs/base/utility.less
+++ b/libs/base/utility.less
@@ -51,13 +51,13 @@
 /**
  * Hide revealable blocks by default, unless the user has no JS.
  */
-.js-revealable {
-    display: none;
-
-    .no-js & {
-        display: block;
-    }
-}
+//.js-revealable {
+//    display: none;
+//
+//    .no-js & {
+//        display: block;
+//    }
+//}
 
 @media print {
     /**
