Tweaks to navigation html and less to make it function more easily with current epi source. It now hides sibling groups using display:none. This will need to be done more elegantly in epi.

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -42,7 +42,12 @@
     }
 
     &__heading {
-        a {
+        display: none;
+        &.-active,
+        &.-open {
+            display: block;
+        }
+        >a {
             color: @heritage-blue;
             font-weight: @font-weight-boldest;
             font-size: @font-size-medium;
@@ -57,7 +62,7 @@
             background-color: @gray-8;
         }
     }
-    .active {
+    .-current {
         background-color: @heritage-blue-lightest;
         font-weight: @font-weight-bolder;
         border-color: @heritage-blue-lighter;
