Very small fix to height of heading search bar

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -87,6 +87,7 @@
 input.main-header__search__input {
     width: 25em;
     float: left;
+    padding: 0.25em;
 
     .ie8 & {
         padding: .3em .2em;
