--- a/public/css/site.css
+++ b/public/css/site.css
@@ -6857,6 +6857,7 @@ z-index: 5001; /* any number + 1 */
 input.main-header__search__input {
   width: 25em;
   float: left;
+  padding: 0.25em;
 }
 .ie8 input.main-header__search__input {
   padding: .3em .2em;
