Fixed stylesheet typeface issues

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -17,6 +17,12 @@
 	-ms-filter: none;
 }
 
+
+body{
+	font-family: 'open_sans', Calibri, Arial, Helvetica, sans-serif !important;
+	font-size: 14px;
+}
+
 .no-print {
 	display: none !important;
 }
