Re-added .list--no-style, primarily for content landing pages

--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -28,6 +28,11 @@ li > ol {
     margin-top: (@line-height-computed * 0.5);
 }
 
+.li--no-style {
+    list-style: none;
+    padding-left: 0;
+}
+
 .list-unstyled {
     .list-unstyled {
         padding-left: 1.5em;
