--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5930,6 +5930,10 @@ li > ul,
 li > ol {
   margin-top: 0.5rem;
 }
+.li--no-style {
+  list-style: none;
+  padding-left: 0;
+}
 .list-unstyled .list-unstyled {
   padding-left: 1.5em;
 }
