Updated gitignore to ignore all .map files. Moved toolbar over to .kit format. CSS fixed the height of share buttons beside extent switcher.

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -117,22 +117,26 @@ a.a-social-google-plus, a.a-social-facebook, a.a-social-twitter, a.a-social-what
     content: "\f230";
     color: @facebook-brand-colour;
     &:extend(.a-social-);
+    border: 0;
 }
 .a-social-twitter:before {
     margin-left: -0.65em;
     content: "\f081";
     color: @twitter-brand-colour;
     &:extend(.a-social-);
+    border: 0;
 }
 .a-social-whatsapp:before {
     content: "\f232";
     color: @whatsapp-brand-colour;
     &:extend(.a-social-);
+    border: 0;
 }
 .a-social-google-plus:before {
     content: "\f0d4";
     color: @google-plus-brand-colour;
     &:extend(.a-social-);
+    border: 0;
 }
 .a-social-top- {
     .icon-fa;
@@ -145,16 +149,19 @@ a.a-social-google-plus, a.a-social-facebook, a.a-social-twitter, a.a-social-what
     content: "\f02f";
     color: @blue-light;
     &:extend(.a-social-top-);
+    border: 0;
 }
 .a-social-references:before {
     content: "\f005";
     color: @blue-light;
     &:extend(.a-social-top-);
+    border: 0;
 }
 .a-social-email:before {
     content: "\f003";
     color: @blue-light;
     &:extend(.a-social-top-);
+    border: 0;
 }
 
 
