--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -100,7 +100,7 @@ aside,
 	border: 1px solid @gray-5;
 	padding: @box-spacing;
 	margin: @box-spacing 0;
-	page-break-inside: avoid;
+	//page-break-inside: avoid;
 }
 
 .accordionContent,
