--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -10,29 +10,46 @@ table {
 
 td, 
 th {
-    border: 1px solid @gray-7;
-    padding: @box-spacing*.4;
+    padding: @box-spacing*(2/3);
     text-align: left;
     vertical-align: top;
 }
 
+tr {
+    border: solid @gray-6;
+    border-width: 1px 0;
+    &:nth-child(odd) {
+        background-color: @white;
+    }
+    &:nth-child(even) {
+        background-color: @gray-8;
+    }
+    & > td {
+        border: solid @gray-6;
+        border-width: 0 1px 0 0;
+        &:last-child {
+            border: none;
+        }
+    }
+    & > th {
+        border: solid @heritage-blue-lighter;
+        border-width: 1px 1px 1px 0;
+        &:last-child {
+            border-right: 0;
+        }
+    }
+}
+
 td {
-    background: @white;
     > *:first-child {
         padding-top:0;
     }
 }
 
 th {
-    background: @heritage-blue;
-    color: @white;
-    font-weight: normal;
-
-    a {
-        color: @white;
-        text-decoration: underline;
-    }
-
+    background: @heritage-blue-lightest;
+    color: @heritage-blue;
+    font-weight: @font-weight-bolder;
 }
     
 // Sortable Table
